# expenses_api

./: .cz.toml  .dockerignore  .gitignore  .golangci.yml  CHANGELOG.md  Dockerfile  Makefile  README.md  dev.env  example.env  go.mod  go.sum  local.env  package-lock.json  package.json  pyproject.toml  test.env
.github/workflows/: development.yml
cmd/api/: main.go
internal/auth/: google_auth.go  google_auth_test.go  interface.go  models.go
internal/config/: config.go
internal/repos/: errors.go  (+20 more)
mocks/: Controllable.go  CreateExpense.go  CreateIncome.go  CreateMonthlyRecurrentExpenses.go  CreateRecurrentExpense.go  CurrentMonthDetailsGettable.go  ExpenseCreatable.go  ExpensePeriodicityAddable.go  ExpensePeriodicityCreateable.go  ExpensePeriodicityIsPaidToggable.go  ExpenseSevice.go  ExpenseToPaidSetteable.go  ExpenseToPaidTogglable.go  ExpenseUpdateable.go  ExpensesCountByRecurrentExpensePeriodicityGenerable.go  ExpensesCountRepo.go  ExpensesPeriodicityService.go  ExpensesRepository.go  GetAllRecurrentExpenses.go  GoogleLoginable.go  GoogleTokenValidable.go  HandleableError.go  IncomesRepository.go  LoggedInValidabe.go  LoggedInValidable.go  LoginableByToken.go  Middlewares.go  MonthlyRecurrentExpensesCreateable.go  OpenIDTokenValidable.go  PeriodicityAction.go  RecurrentExpenseCreatable.go  RecurrentExpenseCreator.go  RecurrentExpenseRepo.go  RecurrentExpensesAllGettable.go  RecurrentExpensesCounter.go  RecurrentExpensesGetter.go  RecurrentExpensesMonthlyCreatedRepo.go  SessionCreateable.go  SessionFindable.go  SessionValidable.go  (+15 more)
prisma/: schema.prisma  seed.ts
(+157 files in other folders)
