[tool.poetry]
name = "expenses_api"
version = "0.1.0"
description = ""
authors = ["Manuel Carbajal <manicar2093@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
SQLAlchemy = "^1.4.39"
pydantic = "^1.9.1"
uvicorn = "^0.18.2"
Faker = "^13.14.0"

[tool.poetry.dev-dependencies]
mamba = "^0.11.2"
black = "^22.6.0"
expects = "^0.9.0"
add-trailing-comma = "^2.2.3"
pyformat = "^0.7"
isort = "^5.10.1"
sqlacodegen = "^2.3.0"
psycopg2-binary = "^2.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
